<resources>
    <string name="app_name">DANHUI Control Monitoring App</string>

    <!--  MainActivity -->
    <string name="btn_connect">연결</string>
    <string name="btn_select1">1</string>
    <string name="btn_select2">2</string>
    <string name="btn_select3">3</string>
    <string name="btn_select4">4</string>
    <string name="btn_select5">5</string>
    <string name="btn_select6">6</string>

    <!--  SubTextSendActivity -->
    <string name="btn_send">전송</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

</resources>
